Kubernetes/AKS/24 Azure AKS HTTP Application Routing Add On/myapp/service.yml
apiVersion: v1
kind: Service
metadata:
    name: appcustomnginxaks
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
    selector:
        app: appcustomnginxaks
