Kubernetes/AKS/24 Azure AKS HTTP Application Routing Add On/myapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: app1.c0532092843b4534bf4c.centralindia.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appcustomnginxaks
                port:
                  number: 80
